--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body {
 }
 
 .wrapper {
-  min-height: 100vh;
+  min-height: 500px;
+  max-height: 150vh
 }
 
 code {
@@ -23,39 +24,102 @@ code {
 
 .pre-head {
   color: grey;
-  text-align: center
+  text-align: center;
+  padding-left: 0
+}
+
+.home-back {
+  height: 100vh;
+  background-color: #343a40;
 }
 
 .home {
-  background-color: #343a40;
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 80vh;
+  text-align: center;
+  padding-top: 8rem
 }
 
 .home-head{
   width: 10em;
-  font-size: 72px;
+  font-size: 5rem; 
   color: white;
-  text-align: center;
 }
+
 
 .home-text {
   color: white;
   text-align: center;
+  font-size: 0.8rem;
 }
 
 .home-btn {
   position: absolute;
-  width: 50em;
-  text-align: center;
-  top: 70%;
-  margin-top: 3rem;
+  width: 60em;
+  justify-content: center;
+  margin: 0 auto;
+  top: 60%;
 }
 
 .home-btn Button {
-  font-size: 26px;
-  width: 9em
+  font-size: 0.8rem;
+  width: 12em
+}
+
+
+/* Small devices (landscape phones, 544px and up) */
+
+@media screen and (min-width: 320px) {  
+  .pre-head { font-size: 0.5rem; }
+  .home-text {font-size: 0.25rem;}
+  .home-head {font-size:1rem;} /*1rem = 16px*/
+  .home-btn {top: 35%}
+  .home-btn Button {
+    font-size: 0.6rem;
+    width: 9em;
+    padding: 0.5rem !important;
+    margin: 0.5rem !important
+  }
+}
+
+@media screen and (min-width: 544px) {  
+  .pre-head { font-size: 0.7rem; }
+  .home-text {font-size: 0.5rem;}
+  .home-btn {top: 35%}
+  .home-btn Button {
+    font-size: 0.6rem;
+    width: 9em;
+    padding: 0.5rem !important;
+    margin: 0.5rem !important
+  }
+  .home-head {font-size:1.5rem;} /*1rem = 16px*/
+}
+ 
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+@media screen and (min-width: 768px) {  
+  .pre-head { font-size: 1.1rem; }
+  .home-text {font-size: 0.8rem;}
+  .home-head {font-size:2.5rem;} /*1rem = 16px*/
+  .home-btn {top: 40%}
+}
+ 
+/* Large devices (desktops, 992px and up) */
+@media screen and (min-width: 992px) { 
+  .pre-head { font-size: 1.4rem; }
+  .home-text {font-size: 1rem;}
+  .home-btn {top: 45%}
+  .home-btn Button {
+    font-size: 0.8rem;
+    width: 12em;
+    padding: 1.5rem !important;
+    margin: 1.5rem !important
+  } 
+  .home-head {font-size:3.5rem;} /*1rem = 16px*/
+}
+ 
+/* Extra large devices (large desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {  
+  .pre-head { font-size: 1.5rem; }
+  .home-text {font-size: 1.2rem;}
+  .home-head {font-size:5rem;} /*1rem = 16px*/ 
+  .home-btn {top: 50%} 
 }
